<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Portfolio">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="115"
        android:orientation="vertical"
        >


        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/portfolio_heading"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="@dimen/header_text_size"
            android:layout_weight="15" />

        <Button
            android:id="@+id/launch_spotify_streamer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/btn_spotify_streamer"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_weight="15"
            android:textColor="@android:color/white"
            android:background="@color/project_btn_background"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_marginBottom="@dimen/marginBottom"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/launch_scores_app"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/btn_scores_app"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_weight="15"
            android:textColor="@android:color/white"
            android:background="@color/project_btn_background"
            android:layout_marginBottom="@dimen/marginBottom"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/launch_library_app"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/btn_library_app"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_weight="15"
            android:textColor="@android:color/white"
            android:background="@color/project_btn_background"
            android:layout_marginBottom="@dimen/marginBottom"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/launch_buildit_bigger"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/btn_build_it_bigger"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_weight="15"
            android:textColor="@android:color/white"
            android:background="@color/project_btn_background"
            android:layout_marginBottom="@dimen/marginBottom"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/launch_xyz_reader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/btn_xyz_reader"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_weight="15"
            android:textColor="@android:color/white"
            android:background="@color/project_btn_background"
            android:layout_marginBottom="@dimen/marginBottom"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/launch_capstone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/btn_my_capstone_app"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/button_margin"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_weight="15"
            android:textColor="@android:color/white"
            android:background="@color/capstone_btn_background"
            android:layout_marginBottom="@dimen/marginBottom"
            android:onClick="onClick"/>

    </LinearLayout>


</ScrollView>
